<resources>
    <string name="app_name">Ripetizioni</string>
    <string name="prenotazioni_effettuate">Prenotazioni effettuate</string>
    <string name="visualizza_corsi">Visualizza corsi</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="mandatory">Campo obbligatorio</string>
    <string name="no_ripetizioni_title">Non sono presenti ripetizioni disponibili per questo corso</string>
    <string name="no_prenotazioni_title">Non sono presenti prenotazioni</string>
    <string name="no_ripetizioni_descrizione">Attendi che ne vengano aggiunte nuove</string>
    <string name="no_prenotazioni_descrizione">Vai alla lista dei corsi</string>
    <string name="logout">Login/Logout</string>
    <string name="prova">Prova</string>
    <string name="helloworld">HelloWorld</string>
</resources>